--- a/eng/pipelines/templates/analyze-compliance.yml
+++ b/eng/pipelines/templates/analyze-compliance.yml
@@ -1,34 +1,12 @@
 # Licensed to the .NET Foundation under one or more agreements. The .NET Foundation licenses this file to you under the MIT license. See the LICENSE.md file in the project root for more information.
 
-jobs:
-# Overview of tasks offered for security and compliance:
-# - https://dev.azure.com/securitytools/SecurityIntegration/_wiki/wikis/Guardian/1425/Guardian-Tools
-# - https://eng.ms/docs/security-compliance-identity-and-management-scim/security/azure-security/cloudai-security-fundamentals-engineering/security-integration/guardian-wiki
-# - https://eng.ms/docs/security-compliance-identity-and-management-scim/security/azure-security/cloudai-security-fundamentals-engineering/security-integration/guardian-wiki/sdl-azdo-extension/secure-development-tools-extension-for-azure-devops#tools
-# Other tools to consider:
-# - InferSharp: https://dev.azure.com/securitytools/SecurityIntegration/_wiki/wikis/Guardian/1638/InferSharp-Usage
-# - CodeQL: https://eng.ms/docs/security-compliance-identity-and-management-scim/security/azure-security/cloudai-security-fundamentals-engineering/security-integration/guardian-wiki/sdl-azdo-extension/codeql-build-task
-- job: AnalyzeCompliance
-  displayName: Analyze Compliance
-  timeoutInMinutes: 20
-  steps:
+parameters:
+  - name: SoftwareVersion
+    type: string
 
-  ###################################################################################################################################################################
-  # DOWNLOAD ARTIFACTS
-  ###################################################################################################################################################################
-
-  # Use a disabled, empty script to display the section header in the pipeline UI.
-  - script:
-    displayName: === Download Artifacts ===
-    condition: false
-
-  # Download the build artifacts from the Build job.
-  # The DownloadPipelineArtifact task is used since we can specify the output path. The 'download:' node doesn't allow changes in output location.
-  - task: DownloadPipelineArtifact@2
-    displayName: Download Build Artifacts
-    inputs:
-      artifact: '$(Build.BuildNumber)'
-      path: $(Build.SourcesDirectory)/artifacts/$(BuildConfiguration)
+steps:
+  # Most SDL tasks are run through the 1ES official pipeline template: https://eng.ms/docs/cloud-ai-platform/devdiv/one-engineering-system-1es/1es-docs/1es-pipeline-templates/features/sdlanalysis/overview
+  # However, we still must run CodeSign and APIScan ourselves
 
   ###################################################################################################################################################################
   # RUN ANALYSIS
@@ -68,45 +46,28 @@ jobs:
       ExcludeFolders: bootstrapper
     condition: succeededOrFailed()
 
-  # Scan for problematic terminology. Related documentation:
-  # - https://microsoft.sharepoint.com/sites/globalreadiness/SitePages/PoliCheck.aspx
-  # - https://policheck.microsoft.com/
-  # Requires scanning both the source and the build artifacts: https://liquid.microsoft.com/Web/Object/Read/MS.GlobalReadiness/Requirements/01.01#Zapplicability
-  # YAML reference: https://eng.ms/docs/security-compliance-identity-and-management-scim/security/azure-security/cloudai-security-fundamentals-engineering/security-integration/guardian-wiki/sdl-azdo-extension/PoliCheck-build-task#v2
-  - task: PoliCheck@2
-    displayName: Run PoliCheck
+  # Scan for the use of undocumented APIs.
+  # YAML reference: https://eng.ms/docs/security-compliance-identity-and-management-scim/security/azure-security/cloudai-security-fundamentals-engineering/security-integration/guardian-wiki/sdl-azdo-extension/apiscan-build-task#v2
+  - task: APIScan@2
+    displayName: Run APIScan
     inputs:
-      # F - Scan a particular file or folder (recursively)
-      targetType: F
-      targetArgument: $(Build.SourcesDirectory)
-      # 1 - Enable scanning of comments
-      optionsFC: 1
-      # Scan for severity 1, 2, and 3 issues
-      optionsSEV: '1|2|3'
-    condition: succeededOrFailed()
-
-  # Scan for credentials and other sensitive information. Related documentation:
-  # - https://strikecommunity.azurewebsites.net/articles/4114/credential-scanner-overview.html
-  # Even though it isn't explicitly stated, we scan both the source and the build artifacts.
-  # YAML reference: https://eng.ms/docs/security-compliance-identity-and-management-scim/security/azure-security/cloudai-security-fundamentals-engineering/security-integration/guardian-wiki/sdl-azdo-extension/credscan-azure-devops-build-task#v3-preview
-  - task: CredScan@3
-    displayName: Run CredScan
-    inputs:
-      # Output in PREFast format so TSAUpload can consume it.
-      outputFormat: pre
-    condition: succeededOrFailed()
-
-  # Validates compiler/linker settings and other security-related binary characteristics.
-  # https://github.com/Microsoft/binskim
-  # YAML reference: https://eng.ms/docs/security-compliance-identity-and-management-scim/security/azure-security/cloudai-security-fundamentals-engineering/security-integration/guardian-wiki/sdl-azdo-extension/binskim-build-task#v4
-  - task: BinSkim@4
-    displayName: Run BinSkim
-    inputs:
-      InputType: Basic
-      Function: analyze
-      TargetPattern: binskimPattern
-      AnalyzeTargetBinskim: $(Build.SourcesDirectory)/artifacts/$(BuildConfiguration)/bin/Dlls/**.dll
-    condition: succeededOrFailed()
+      softwareFolder: $(Build.SourcesDirectory)/artifacts/$(BuildConfiguration)/bin/Dlls
+      softwareName: Dotnet-Project-System
+      softwareVersionNum: ${{ parameters.SoftwareVersion }}
+      softwareBuildNum: $(Build.BuildId)
+      symbolsFolder: SRV*http://symweb
+      noCopySymbols: true
+      noCopyBinaries: true
+      noDecompress: true
+      isLargeApp: true
+      verbosityLevel: minimal
+      preserveTempFiles: true
+    # APIScan requires an Azure Identity to run. That is provided via an Azure service principal.
+    # - https://microsoft.sharepoint.com/teams/apiscan/APIScan%20User%20Wiki/authentication_using_AAD_identities.aspx
+    # - https://microsoft.sharepoint.com/teams/apiscan/Lists/Contacts%20%20System%20Account%20and%20Wrappers/AllItems.aspx?skipSignal=true
+    # This value is provided from the DotNet-Project-System variable group, defined in the stage variables.
+    env:
+      AzureServicesAuthConnectionString: $(ApiScanConnectionString)
 
   ###################################################################################################################################################################
   # PUBLISH RESULTS
@@ -117,29 +78,23 @@ jobs:
     displayName: === Publish Results ===
     condition: false
 
-  # Only run this task if UploadTSAResults was specified.
-  - ${{ if eq(variables.UploadTSAResults, true) }}:
-    # Upload the output of the compliance tools to Trust Services Automation (TSA), and create Azure DevOps work items for failures.
-    # TSA overview: https://eng.ms/docs/cloud-ai-platform/developer-services/one-engineering-system-1es/1es-docs/trust-services-automation-tsa/tsa-overview
-    # YAML reference: https://eng.ms/docs/cloud-ai-platform/developer-services/one-engineering-system-1es/1es-docs/trust-services-automation-tsa/tsa-upload-build-task#yaml-reference
-    - task: TSAUpload@2
-      displayName: Upload Results to TSA
-      inputs:
-        GdnPublishTsaOnboard: true
-        # Configures the compliance tool results to process.
-        # Configuration file format:
-        # - https://eng.ms/docs/security-compliance-identity-and-management-scim/security/azure-security/cloudai-security-fundamentals-engineering/security-integration/guardian-wiki/microsoft-guardian/guardian-tsa#tsa-options-file
-        # - https://dev.azure.com/securitytools/SecurityIntegration/_wiki/wikis/Guardian/1409/Guardian-TSA?anchor=tsa-options-file
-        GdnPublishTsaConfigFile: $(Build.SourcesDirectory)/eng/pipelines/configuration/TSAConfig.gdntsa
-        GdnPublishTsaExportedResultsPublishable: true
-      condition: succeededOrFailed()
-
   # Publishes the results as artifacts to the Azure Pipeline.
   # YAML reference: https://eng.ms/docs/security-compliance-identity-and-management-scim/security/azure-security/cloudai-security-fundamentals-engineering/security-integration/guardian-wiki/sdl-azdo-extension/publish-security-analysis-logs#v3
   - task: PublishSecurityAnalysisLogs@3
     displayName: Publish Compliance Artifacts
     inputs:
       ArtifactName: Analysis-Compliance
+      ArtifactType: Container
+      AllTools: true
+      ToolLogsNotFoundAction: Standard
+    condition: succeededOrFailed()
+
+  # Publishes the results as artifacts to the Azure Pipeline.
+  # YAML reference: https://eng.ms/docs/security-compliance-identity-and-management-scim/security/azure-security/cloudai-security-fundamentals-engineering/security-integration/guardian-wiki/sdl-azdo-extension/publish-security-analysis-logs#v3
+  - task: PublishSecurityAnalysisLogs@3
+    displayName: Publish API Artifacts
+    inputs:
+      ArtifactName: Analysis-API
       ArtifactType: Container
       AllTools: true
       ToolLogsNotFoundAction: Standard
